First pass run-through, make generate.rb create a normal html file too

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
 - (II.D.4) Not actually an error because of (II.D.5), but be explicit
   that you can't put a Yukko in an elevator to prevent internal
   control buttons being used
-- (II.D.5) "after handing off the potion" -- what if there is no
+- (III.D.5) "after handing off the potion" -- what if there is no
   jailer?
 - Interaction of a Goomba chain and someone with a charged white belt
   joining the chain
